--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAU-Web Search</title>
+    <title>NeoWeb Search</title>
     <style>
         :root {
             --primary-color: #4285f4;
@@ -302,7 +302,7 @@
     <div class="container">
         <div class="main-content" id="main-content">
             <header>
-                <h1>GAU-Web Search</h1>
+                <h1>NeoWeb Search</h1>
                 <form action="/" method="get">
                     <input type="text" name="q" placeholder="Rechercher..." value="{{ query or '' }}">
                     <input type="submit" value="Rechercher">
